--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,21 @@
 # user variables, change this to make custom site.
 
-name: Lemma
+name: Hui's Blog
 desc: Yet another simple theme for Jekyll.
 author:
-  name: neizod
+  name: Hui Yang
   avatar: //gravatar.com/avatar/daa1cc36ed2ab0d13045d5cd2431cde9?s=320
   profile: |
-    Just another ordinary grad student in computer engineering.
-    I'm interest in programming language, algorithm, and mathematics.
-
-    I live in Chiang Mai or Bangkok, Thailand.
-    And you may found me around BarCamp event ;D
+    I am a MS graduate student in CS at UC riverside. I am interesed in programming/ computer network!
   socials:
     facebook:
-    twitter: //twitter.com/neizod
+    twitter:
     google-plus:
-    github: //github.com/neizod
-    stack-overflow: //stackoverflow.com/users/889578/neizod
+    github: //github.com/csseryang
+    stack-overflow: 
     instagram:
     pinterest:
-    steam: //steamcommunity.com/id/neizod/
+    steam: 
 license: MIT License
 
 
